# orb-data

./: .gitignore  Baseline hit rates (Asia session).csv  Multi ORB.ipynb  ORB Analysis 2876639343b68030804bc2f3e1cbe427.md  ORB.ipynb  README.md  __init__.py  analysis_orb_feature_summary.py  app.py  bootstrap_orb.ps1  client.py  orb_analysis.py  orb_levels.py  orb_project_codex_context_doc_handoff.md  pipeline.py  plotting.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.streamlit/: config.toml
analysis_reports/: feature_summary_asia_L1_bear.txt  feature_summary_asia_L1_bull.txt  feature_summary_asia_L2_bear.txt  feature_summary_asia_L2_bull.txt  feature_summary_asia_L3_bear.txt  feature_summary_asia_L3_bull.txt  feature_summary_asia_orb_high.txt  feature_summary_asia_orb_low.txt  feature_summary_asia_prev_day_high.txt  feature_summary_asia_prev_day_low.txt  feature_summary_asia_prev_week_high.txt  feature_summary_asia_prev_week_low.txt
orb_data/: __init__.py  alt_charts.py  candles.py  client.py  figure.py  orb_levels.py  pipeline.py  plotting.py
pages/: 01_Analysis.py  01_Targeted_Analysis.py  02_Signature_Edge_Explorer.py  03_Volume_Spread_Analysis.py  04_Jib_ORB_Strategy.py
